--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -38,6 +38,8 @@
     background-color: #FDF6E4
   &-11
     background-color: #C3B7EF
+  &-12
+    background-color: #FADEF8
   &-info
     background-color: #E8EEFD
   &-sintesis
